# transpile_benchy

./: .gitmodules  .pre-commit-config.yaml  CITATION.cff  Makefile  README.md  setup.cfg
.github/ISSUE_TEMPLATE/: bug.yaml  feature.yaml
.github/scripts/: rename_project.sh
.github/workflows/: rename_project.yml
src/notebooks/: library.ipynb  main.ipynb  revkit.ipynb  supermarq.ipynb
src/notebooks/junk/: library.ipynb  revkit.ipynb
src/project_name/: __init__.py
src/scripts/: main.ipynb
src/tests/: electron_test.py  main_test.py
src/transpile_benchy/: __init__.py  benchmark.py  deprecate_main.py  interface.py  library.py  main.py  metrics.py  render.py  runner.py
src/transpile_benchy/interfaces/: __init__.py  abc_interface.py  draft_circuits.md  errors.py  mqt_interface.py  qasm_interface.py  qiskit_circuits.py  qiskit_interface.py
src/transpile_benchy/interfaces/circuit_lists/: README.md  basic.txt  nassc.txt  paspam.txt  sabre.txt
src/transpile_benchy/interfaces/hardcoded/: adder_n4.qasm  ae_n16.qasm  ae_n8.qasm  bigadder_n18.qasm  dj_n8.qasm  fredkin_n3.qasm  multiplier_n15.qasm  portfolioqaoa_n16.qasm  qaoa_n8.qasm  qft_n8.qasm  qftentangled_n16.qasm  qftentangled_n8.qasm  qpeexact_n16.qasm  qpeexact_n8.qasm  qram_n20.qasm  sat_n11.qasm  seca_n11.qasm  toffoli_n3.qasm
src/transpile_benchy/metrics/: __init__.py  abc_metrics.py  depth_metric.py  gate_counts.py  timer.py
src/transpile_benchy/passmanagers/: __init__.py  abc_runner.py  qiskit_baseline.py
src/transpile_benchy/utilities/: README.md  numerical_decomp.py
submodules/QUEKO-benchmark/: CONNECTION.py  README.md  queko.py
