[metadata]
name = transpile_benchy
description = Collection of existing quantum circuit transpilation benchmarking tools
version = 0.1.0
author = Evan McKinney
# author_email =

[options]
python_requires = >=3.9
install_requires =
    numpy
    qiskit
    qutip
    weylchamber
    matplotlib
    LovelyPlots
    tqdm
    mqt.bench # this is a submodule but we interface with it directly
    monodromy @ git+https://github.com/evmckinney9/monodromy.git

[options.extras_require]
dev =
    jupyter
    ipykernel
    ipywidgets
    pre-commit
    pylatexenc
format =
    pre-commit
    black[jupyter]
    isort
    tomli
    pydocstyle
    ruff
    docformatter[tomli]
test =
    pytest
