[metadata]
name = transpile_benchy
description = Collection of existing quantum circuit transpilation benchmarking tools
version = 0.1.0
author = Evan McKinney

[options]
python_requires = >=3.9
install_requires =
    numpy
    scipy
    qiskit #~=0.43.3
    qiskit-algorithms
    qutip
    weylchamber
    matplotlib
    LovelyPlots
    tqdm
    # supermarq # don't include this one, I think it has too many conflicting dependencies
    # mqt.bench==1.0.3

[options.extras_require]
dev =
    monodromy @ git+https://github.com/evmckinney9/monodromy.git
    jupyter
    ipykernel
    ipywidgets
    pre-commit
    pylatexenc
format =
    pre-commit
    black[jupyter]
    isort
    tomli
    pydocstyle
    ruff
    docformatter[tomli]
test =
    pytest
